New APIs + documentation
